nginx-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  nodeSelector:
    gpu: "true"
  containers:
    - name: nginx
      image: nginx:stable-alpine3.20-perl
      ports:
        - containerPort: 80
