nginx-with-annotation.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-annotation
  labels:
    team: product
    version: 1.0.1
    environment: development
  annotations:
    description: This is a development environment
    anithing: Something...
spec:
  containers:
    - name: nginx
      image: nginx:stable-alpine3.20-perl
      ports:
        - containerPort: 80
