niginx-with-label.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-label
  labels:
    team: finance
    version: 1.0.0
    environment: production
spec:
  containers:
    - name: nginx
      image: nginx:stable-alpine3.20-perl
      ports:
        - containerPort: 80
